# perlin_noise_playground

./: Cargo.toml  README.md
assets/shaders/: donut_extension.wgsl  doughnut_material.wgsl  fire_material.wgsl  perlin_material_2d.wgsl  terrain_material.wgsl
examples/: donuts.rs  doughnuts.rs  fire.rs  perlin.rs  terrain.rs
src/: camera_controller_plugin.rs  lib.rs  perlin.wgsl
